--- a/GestorTeocratico/Components/Layout/NavMenu.razor
+++ b/GestorTeocratico/Components/Layout/NavMenu.razor
@@ -7,6 +7,7 @@
         <RadzenPanelMenu>
             <RadzenPanelMenuItem Text="Home" Path="" />
             <RadzenPanelMenuItem Text="Departments" Path="/departments" />
+            <RadzenPanelMenuItem Text="Publishers" Path="/publishers" />
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Account/Manage">
                     <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
@@ -28,6 +29,7 @@
             <RadzenPanelMenuItem Text="Home" Path="" />
             <RadzenPanelMenuItem Text="Congregations" Path="/congregations" />
             <RadzenPanelMenuItem Text="Departments" Path="/departments" />
+            <RadzenPanelMenuItem Text="Publishers" Path="/publishers" />
         </RadzenPanelMenu>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Account/Register">
