Add Responsibility management components and update navigation

--- a/GestorTeocratico/Components/Layout/NavMenu.razor
+++ b/GestorTeocratico/Components/Layout/NavMenu.razor
@@ -8,6 +8,7 @@
             <RadzenPanelMenuItem Text="Home" Path="" />
             <RadzenPanelMenuItem Text="Departments" Path="/departments" />
             <RadzenPanelMenuItem Text="Publishers" Path="/publishers" />
+            <RadzenPanelMenuItem Text="Responsibilities" Path="/responsibilities" />
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="Account/Manage">
                     <span class="bi bi-person-fill-nav-menu" aria-hidden="true"></span> @context.User.Identity?.Name
@@ -30,6 +31,7 @@
             <RadzenPanelMenuItem Text="Congregations" Path="/congregations" />
             <RadzenPanelMenuItem Text="Departments" Path="/departments" />
             <RadzenPanelMenuItem Text="Publishers" Path="/publishers" />
+            <RadzenPanelMenuItem Text="Responsibilities" Path="/responsibilities" />
         </RadzenPanelMenu>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Account/Register">
