Update NavMenu localization for Spanish language support

--- a/GestorTeocratico/Components/Layout/NavMenu.razor
+++ b/GestorTeocratico/Components/Layout/NavMenu.razor
@@ -5,12 +5,12 @@
 <AuthorizeView>
     <Authorized>
         <RadzenPanelMenu>
-            <RadzenPanelMenuItem Text="Home" Path="" Icon="home" />
-            <RadzenPanelMenuItem Text="Congregations" Path="/congregations" Icon="fort" />
-            <RadzenPanelMenuItem Text="Departments" Path="/departments" Icon="business" />
-            <RadzenPanelMenuItem Text="Publishers" Path="/publishers" Icon="people" />
-            <RadzenPanelMenuItem Text="Responsibilities" Path="/responsibilities" Icon="assignment" />
-            <RadzenPanelMenuItem Text="Meeting Schedules" Path="/meeting-schedules" Icon="event_note" />
+            <RadzenPanelMenuItem Text="Inicio" Path="" Icon="home" />
+            <RadzenPanelMenuItem Text="Congregación" Path="/congregations" Icon="fort" />
+            <RadzenPanelMenuItem Text="Departamentos" Path="/departments" Icon="business" />
+            <RadzenPanelMenuItem Text="Responsabilidades" Path="/responsibilities" Icon="assignment" />
+            <RadzenPanelMenuItem Text="Publicadores" Path="/publishers" Icon="people" />
+            <RadzenPanelMenuItem Text="Programación Reuniones" Path="/meeting-schedules" Icon="event_note" />
         </RadzenPanelMenu>
         
         <RadzenPanelMenu>
