--- a/GestorTeocratico/Components/Pages/Congregation/CreateCongregation.razor
+++ b/GestorTeocratico/Components/Pages/Congregation/CreateCongregation.razor
@@ -3,25 +3,25 @@
 @inject DialogService DialogService
 @inject GestorTeocratico.Features.Congregations.ICongregationService CongregationService
 
-<PageTitle>Add Congregation</PageTitle>
+<PageTitle>Agregar Congregación</PageTitle>
 <RadzenColumn SizeMD=12>
     <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger"
-                 Visible="@_errorVisible">Cannot save Congregation
+                 Visible="@_errorVisible">No se puede guardar la congregación
     </RadzenAlert>
     <RadzenTemplateForm TItem="Congregation" Data="@(_congregation)" Visible="@(_congregation != null)"
                         Submit="@HandleValidSubmit">
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Name" Component="Name" style="width: 100%"/>
+                <RadzenLabel Text="Nombre" Component="Name" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_congregation.Name)" Name="Name"/>
-                <RadzenRequiredValidator Component="Name" Text="Name is required"/>
+                <RadzenRequiredValidator Component="Name" Text="El nombre es obligatorio"/>
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Midweek Meeting Day Even Year" Component="MidweekMeetingDayEvenYear"
+                <RadzenLabel Text="Día Semana Año Par" Component="MidweekMeetingDayEvenYear"
                              style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
@@ -31,7 +31,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Midweek Meeting Day Odd Year" Component="MidweekMeetingDayOddYear"
+                <RadzenLabel Text="Día Semana Año Impar" Component="MidweekMeetingDayOddYear"
                              style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
@@ -43,7 +43,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Weekend Meeting Day Even Year" Component="WeekendMeetingDayEvenYear"
+                <RadzenLabel Text="Día Fin de Semana Año Par" Component="WeekendMeetingDayEvenYear"
                              style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
@@ -53,7 +53,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Weekend Meeting Day Odd Year" Component="WeekendMeetingDayOddYear"
+                <RadzenLabel Text="Día Fin de Semana Año Impar" Component="WeekendMeetingDayOddYear"
                              style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
@@ -63,7 +63,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Address" Component="Address" style="width: 100%"/>
+                <RadzenLabel Text="Dirección" Component="Address" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_congregation.Address)"
@@ -72,7 +72,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="City" Component="City" style="width: 100%"/>
+                <RadzenLabel Text="Ciudad" Component="City" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_congregation.City)" Name="City"/>
@@ -80,9 +80,9 @@
         </RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
                      JustifyContent="JustifyContent.End" Gap="0.5rem">
-            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Save"
+            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Guardar"
                           Variant="Variant.Flat"/>
-            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancel" Variant="Variant.Flat"
+            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancelar" Variant="Variant.Flat"
                           Click="@CancelButtonClick"/>
         </RadzenStack>
     </RadzenTemplateForm>
