--- a/GestorTeocratico/Components/Pages/Publisher/CreatePublisher.razor
+++ b/GestorTeocratico/Components/Pages/Publisher/CreatePublisher.razor
@@ -1,28 +1,27 @@
-@* @page "/create-publisher" *@
 @using GestorTeocratico.Entities
 @using GestorTeocratico.Shared.Enums
 @inject DialogService DialogService
 @inject GestorTeocratico.Features.Publishers.IPublisherService PublisherService
 
-<PageTitle>Add Publisher</PageTitle>
+<PageTitle>Agregar Publicador</PageTitle>
 <RadzenColumn SizeMD=12>
     <RadzenAlert Shade="Shade.Lighter" Variant="Variant.Flat" Size="AlertSize.Small" AlertStyle="AlertStyle.Danger"
-                 Visible="@_errorVisible">Cannot save Publisher
+                 Visible="@_errorVisible">No se puede guardar el publicador
     </RadzenAlert>
     <RadzenTemplateForm TItem="Publisher" Data="@(_publisher)" Visible="@(_publisher != null)"
                         Submit="@HandleValidSubmit">
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="First Name" Component="FirstName" style="width: 100%"/>
+                <RadzenLabel Text="Nombre" Component="FirstName" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_publisher.FirstName)" Name="FirstName"/>
-                <RadzenRequiredValidator Component="FirstName" Text="First Name is required"/>
+                <RadzenRequiredValidator Component="FirstName" Text="El nombre es obligatorio"/>
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Last Name" Component="LastName" style="width: 100%"/>
+                <RadzenLabel Text="Apellido" Component="LastName" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_publisher.LastName)" Name="LastName"/>
@@ -30,7 +29,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Mother Last Name" Component="MotherLastName" style="width: 100%"/>
+                <RadzenLabel Text="Apellido Materno" Component="MotherLastName" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_publisher.MotherLastName)" Name="MotherLastName"/>
@@ -38,7 +37,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Phone" Component="Phone" style="width: 100%"/>
+                <RadzenLabel Text="Teléfono" Component="Phone" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_publisher.Phone)" Name="Phone"/>
@@ -46,7 +45,7 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Email" Component="Email" style="width: 100%"/>
+                <RadzenLabel Text="Correo Electrónico" Component="Email" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenTextBox style="display: block; width: 100%" @bind-Value="@(_publisher.Email)" Name="Email"/>
@@ -54,22 +53,22 @@
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Gender" Component="Gender" style="width: 100%"/>
+                <RadzenLabel Text="Género" Component="Gender" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenDropDown @bind-Value="@_publisher.Gender" 
                                 Data="@_genderOptions" 
                                 TextProperty="@nameof(GenderOption.DisplayName)" 
                                 ValueProperty="@nameof(GenderOption.Value)"
-                                Placeholder="Select gender"
+                                Placeholder="Selecciona género"
                                 Style="width: 100%; max-width: 400px;" 
                                 Name="Gender" />
-                <RadzenRequiredValidator Component="Gender" Text="Gender is required"/>
+                <RadzenRequiredValidator Component="Gender" Text="El género es obligatorio"/>
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Privilege" Component="Privilege" style="width: 100%"/>
+                <RadzenLabel Text="Privilegio" Component="Privilege" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenDropDown @bind-Value="@_publisher.Privilege" 
@@ -77,14 +76,14 @@
                                 TextProperty="@nameof(PrivilegeOption.DisplayName)" 
                                 ValueProperty="@nameof(PrivilegeOption.Value)"
                                 AllowClear="true"
-                                Placeholder="Select privilege (optional)"
+                                Placeholder="Selecciona privilegio (opcional)"
                                 Style="width: 100%; max-width: 400px;" 
                                 Name="Privilege" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Responsibilities" Component="ResponsibilityIds" style="width: 100%"/>
+                <RadzenLabel Text="Responsabilidades" Component="ResponsibilityIds" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenDropDown @bind-Value="@_selectedResponsibilityIds" 
@@ -93,14 +92,14 @@
                                 ValueProperty="@nameof(Responsibility.ResponsibilityId)"
                                 Multiple="true"
                                 AllowClear="true"
-                                Placeholder="Select responsibilities (optional)"
+                                Placeholder="Selecciona responsabilidades (opcional)"
                                 Style="width: 100%; max-width: 400px;" 
                                 Name="ResponsibilityIds" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenRow style="margin-bottom: 1rem">
             <RadzenColumn SizeMD="3">
-                <RadzenLabel Text="Departments" Component="DepartmentIds" style="width: 100%"/>
+                <RadzenLabel Text="Departamentos" Component="DepartmentIds" style="width: 100%"/>
             </RadzenColumn>
             <RadzenColumn SizeMD="9">
                 <RadzenDropDown @bind-Value="@_selectedDepartmentIds" 
@@ -109,16 +108,16 @@
                                 ValueProperty="@nameof(Department.DepartmentId)"
                                 Multiple="true"
                                 AllowClear="true"
-                                Placeholder="Select departments (optional)"
+                                Placeholder="Selecciona departamentos (opcional)"
                                 Style="width: 100%; max-width: 400px;" 
                                 Name="DepartmentIds" />
             </RadzenColumn>
         </RadzenRow>
         <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
                      JustifyContent="JustifyContent.End" Gap="0.5rem">
-            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Save"
+            <RadzenButton ButtonStyle="ButtonStyle.Primary" ButtonType="ButtonType.Submit" Icon="save" Text="Guardar"
                           Variant="Variant.Flat"/>
-            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancel" Variant="Variant.Flat"
+            <RadzenButton ButtonStyle="ButtonStyle.Light" Text="Cancelar" Variant="Variant.Flat"
                           Click="@CancelButtonClick"/>
         </RadzenStack>
     </RadzenTemplateForm>
