--- a/GestorTeocratico/Components/Pages/Publisher/Publishers.razor
+++ b/GestorTeocratico/Components/Pages/Publisher/Publishers.razor
@@ -6,11 +6,11 @@
 @inject DialogService DialogService
 @inject NotificationService NotificationService
 
-<PageTitle>Publishers</PageTitle>
+<PageTitle>Publicadores</PageTitle>
 <RadzenStack>
     <RadzenRow AlignItems="AlignItems.Center">
         <RadzenColumn Size="12" SizeMD="6">
-            <RadzenText Text="Publishers" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0"/>
+            <RadzenText Text="Publicadores" TextStyle="TextStyle.H3" TagName="TagName.H1" style="margin: 0"/>
         </RadzenColumn>
         <RadzenColumn Size="12" SizeMD="6">
             <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center"
@@ -26,14 +26,14 @@
                             PageSizeOptions=@(new int[] { 5, 10, 20, 30 })
                             Data="@(_publishers)" >
                 <Columns>
-                    <RadzenDataGridColumn Property="@nameof(Publisher.FirstName)" Title="First Name"/>
-                    <RadzenDataGridColumn Property="@nameof(Publisher.LastName)" Title="Last Name"/>
-                    <RadzenDataGridColumn Property="@nameof(Publisher.Gender)" Title="Gender">
+                    <RadzenDataGridColumn Property="@nameof(Publisher.FirstName)" Title="Nombre"/>
+                    <RadzenDataGridColumn Property="@nameof(Publisher.LastName)" Title="Apellido"/>
+                    <RadzenDataGridColumn Property="@nameof(Publisher.Gender)" Title="Género">
                         <Template Context="publisher">
                             <span>@GetGenderDisplayName(publisher.Gender)</span>
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Property="@nameof(Publisher.Privilege)" Title="Privilege">
+                    <RadzenDataGridColumn Property="@nameof(Publisher.Privilege)" Title="Privilegio">
                         <Template Context="publisher">
                             @if (publisher.Privilege.HasValue)
                             {
@@ -45,7 +45,7 @@
                             }
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Property="@nameof(Publisher.ResponsibleDepartments)" Title="Responsible Departments">
+                    <RadzenDataGridColumn Property="@nameof(Publisher.ResponsibleDepartments)" Title="Departamentos Responsables">
                         <Template Context="publisher">
                             @if (publisher.ResponsibleDepartments?.Any() == true)
                             {
@@ -61,7 +61,7 @@
                             }
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Property="@nameof(Publisher.PublisherResponsibilities)" Title="Responsibilities">
+                    <RadzenDataGridColumn Property="@nameof(Publisher.PublisherResponsibilities)" Title="Responsabilidades">
                         <Template Context="publisher">
                             @if (publisher.PublisherResponsibilities?.Any() == true)
                             {
@@ -77,9 +77,11 @@
                             }
                         </Template>
                     </RadzenDataGridColumn>
-                    <RadzenDataGridColumn Filterable="false" Sortable="false" Width="150px" Title="Actions"
+                    <RadzenDataGridColumn Filterable="false" Sortable="false" Width="150px" Title="Acciones"
                                           TextAlign="TextAlign.Center">
                         <Template Context="publisher">
+                            <RadzenButton Icon="article" ButtonStyle="ButtonStyle.Success" Variant="Variant.Outlined" Size="ButtonSize.Medium"
+                                          Click="@(() => ShowDetailsModal(publisher))" @onabort:stopPropagation="true" />
                             <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Flat"
                                           Size="ButtonSize.Medium"
                                           Click="@(() => EditRow(publisher))" @onclick:stopPropagation="true"/>
@@ -106,13 +108,13 @@
 
     private async Task AddButtonClick(MouseEventArgs args)
     {
-        await DialogService.OpenAsync<CreatePublisher>("Create Publisher", null);
+        await DialogService.OpenAsync<CreatePublisher>("Agregar Publicador", null);
         await grid0.Reload();
     }
 
     private async Task EditRow(Publisher args)
     {
-        await DialogService.OpenAsync<EditPublisher>("Edit Publisher", new Dictionary<string, object> { { "PublisherId", args.PublisherId } });
+        await DialogService.OpenAsync<EditPublisher>("Editar Publicador", new Dictionary<string, object> { { "PublisherId", args.PublisherId } });
         await grid0.Reload();
     }
 
@@ -120,7 +122,7 @@
     {
         try
         {
-            if (await DialogService.Confirm("Are you sure you want to delete this record?") == true)
+            if (await DialogService.Confirm("¿Está seguro que desea eliminar este registro?", "Confirmar", new ConfirmOptions { OkButtonText = "Eliminar", CancelButtonText = "Cancelar" }) == true)
             {
                 var deleteResult = await PublisherService.DeleteAsync(publisher.PublisherId);
                 await grid0.Reload();
@@ -132,9 +134,15 @@
             {
                 Severity = NotificationSeverity.Error,
                 Summary = $"Error",
-                Detail = $"Unable to delete Publisher"
+                Detail = $"No se pudo eliminar el publicador"
             });
         }
+    }
+    
+    private async Task ShowDetailsModal(Publisher publisher)
+    {
+        var parameters = new Dictionary<string, object> { ["publisher"] = publisher };
+        await DialogService.OpenAsync<DetailsPublisher>("Detalles del Publicador", parameters);
     }
 
     private string GetGenderDisplayName(Gender gender)
